@@ -1,8 +1,9 @@
-@comment $NetBSD: PLIST,v 1.3 2005/01/29 10:17:07 mjl Exp $
+@comment $NetBSD: PLIST,v 1.4 2007/06/19 18:46:16 mjl Exp $
 bin/postgresql_autodoc
 share/postgresql_autodoc/dia.tmpl
 share/postgresql_autodoc/dot.tmpl
 share/postgresql_autodoc/html.tmpl
 share/postgresql_autodoc/xml.tmpl
+share/postgresql_autodoc/neato.tmpl
 share/postgresql_autodoc/zigzag.dia.tmpl
 @dirrm share/postgresql_autodoc
