@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2007,v 1.1421 2007/06/19 15:02:36 jlam Exp $
+$NetBSD: CHANGES-2007,v 1.1422 2007/06/19 18:46:15 mjl Exp $
 
 Changes to the packages collection and infrastructure in 2007:
 
@@ -2644,3 +2644,4 @@ Changes to the packages collection and infrastructure in 2007:
 	Updated net/libupnp to 1.6.0rc1 [rh 2007-06-19]
 	Added wm/twm version 1.0.3 [jlam 2007-06-19]
 	Updated meta-pkgs/modular-xorg-apps to 1.2 [jlam 2007-06-19]
+	Updated textproc/postgresql-autodoc to 1.30 [mjl 2007-06-19]
